--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,6 +113,7 @@ aside{
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
+  
 }
 
 /* Consolidated aside section to one style */
@@ -122,7 +123,7 @@ aside section {
   }
   /* Consolidated aside section h3 to one style */
 aside section h3 {
-    margin-bottom: 10px;
+    margin-bottom: 100px;
     text-align: center;
   }
   /* Consolidated aside section img to one style */
@@ -132,7 +133,9 @@ aside section img {
     max-width: 150px;
   }
 
+ h3 {display: inline;
 
+ }
   /*removed all link classes*/
 
 
